// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable buttons and input when using disabled prop 1`] = `
<div role="group"
     class="r-stepper"
>
  <button type="button"
          class="r-stepper__minus r-stepper__minus--disabled"
          aria-disabled="true"
  >
  </button>
  <input type="text"
         role="spinbutton"
         class="r-stepper__input"
         disabled
         inputmode="decimal"
         aria-valuemax="Infinity"
         aria-valuemin="1"
         aria-valuenow="1"
  >
  <button type="button"
          class="r-stepper__plus r-stepper__plus--disabled"
          aria-disabled="true"
  >
  </button>
</div>
`;

exports[`should update input height and button size when using button-size prop 1`] = `
<div role="group"
     class="r-stepper"
>
  <button type="button"
          style="width: 2rem; height: 2rem;"
          class="r-stepper__minus r-stepper__minus--disabled"
          aria-disabled="true"
  >
  </button>
  <input type="text"
         role="spinbutton"
         class="r-stepper__input"
         style="height: 2rem;"
         inputmode="decimal"
         aria-valuemax="Infinity"
         aria-valuemin="1"
         aria-valuenow="1"
  >
  <button type="button"
          style="width: 2rem; height: 2rem;"
          class="r-stepper__plus r-haptics-feedback"
  >
  </button>
</div>
`;
